RESOLVED FIXED 148071
[CSS Grid Layout] auto-margins alignment does not work for heights
https://bugs.webkit.org/show_bug.cgi?id=148071
Summary [CSS Grid Layout] auto-margins alignment does not work for heights
Javier Fernandez
Reported 2015-08-16 15:29:58 PDT
Grid Layout specification states that grid items should be centered horizontally when using auto margins. https://drafts.csswg.org/css-grid/#auto-margins Right now, we only manage vertical alignment with auto margins.
Attachments
Patch (55.03 KB, patch)
2015-08-26 06:16 PDT, Javier Fernandez
no flags
Patch (54.95 KB, patch)
2015-08-31 08:31 PDT, Javier Fernandez
no flags
Patch (54.91 KB, patch)
2015-08-31 08:36 PDT, Javier Fernandez
no flags
Javier Fernandez
Comment 1 2015-08-26 06:16:57 PDT
Sergio Villar Senin
Comment 2 2015-08-31 08:09:16 PDT
Comment on attachment 259945 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=259945&action=review > Source/WebCore/ChangeLog:11 > + implements the expected behavior in the row-axis. Where's the code refactoring? > Source/WebCore/rendering/RenderGrid.cpp:1204 > + // We need pending layouts to be done in order to compute auto-margins properly. Duplicate comment.
Javier Fernandez
Comment 3 2015-08-31 08:26:28 PDT
Comment on attachment 259945 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=259945&action=review >> Source/WebCore/ChangeLog:11 >> + implements the expected behavior in the row-axis. > > Where's the code refactoring? I meant the code removal from RenderBox to handle style changes affecting margin computation, so it's handled now in the new resetAutoMarginsAndLogicalTopInColumnAxis instead.
Javier Fernandez
Comment 4 2015-08-31 08:31:26 PDT
Javier Fernandez
Comment 5 2015-08-31 08:35:47 PDT
Comment on attachment 259945 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=259945&action=review >>> Source/WebCore/ChangeLog:11 >>> + implements the expected behavior in the row-axis. >> >> Where's the code refactoring? > > I meant the code removal from RenderBox to handle style changes affecting margin computation, so it's handled now in the new resetAutoMarginsAndLogicalTopInColumnAxis instead. I agree that is not a very clear sentence, because I talk about that removal later. So I'll remove it from the ChangeLog.
Javier Fernandez
Comment 6 2015-08-31 08:36:46 PDT
WebKit Commit Bot
Comment 7 2015-08-31 09:30:25 PDT
Comment on attachment 260284 [details] Patch Clearing flags on attachment: 260284 Committed r189169: <http://trac.webkit.org/changeset/189169>
WebKit Commit Bot
Comment 8 2015-08-31 09:30:30 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.